--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,3 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
-
 # dependencies
 /node_modules
 /.pnp
@@ -25,15 +23,10 @@ yarn-error.log*
 # Local environment files
 /src/.env
 
-# Specific to your file structure
 /babel.config.js
 /config-overrides.js
-/package.json
 
-# Assuming these directories exist in your project
-/public
-
-# Other common files or directories to ignore if present
+# Other common files 
 *.log
 *.swp
 *.swo
